--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
+
 @tailwind components;
+@layer components {
+  .header {
+    @apply w-screen h-20 bg-teal-200 text-3xl font-bold underline
+  }
+}
+
 @tailwind utilities;
