--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,22 @@
 @tailwind base;
 
 @tailwind components;
+
 @layer components {
   .header {
-    @apply w-screen h-20 bg-teal-200 text-3xl font-bold underline
+    @apply flex justify-center align-middle w-screen h-20 bg-teal-200 text-3xl font-bold underline
   }
 }
 
 @tailwind utilities;
+
+@layer utilities {
+  .footer {
+    display: flex;
+    width: 100vw;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(153 246 228);
+  }
+}
